--- a/styles/global.scss
+++ b/styles/global.scss
@@ -198,3 +198,20 @@ header{
   border-radius: 50%;
 }
 
+.create-prompt{
+  &-wrapper{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(248, 248, 248, 0.25);
+    backdrop-filter: blur(1px);
+  }
+
+  h2{
+    color: $mainColor;
+  }
+
+}
+
