--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -7,6 +7,8 @@ $textColor: #222222;
 $textColor-80: rgba($color: $textColor, $alpha: 0.8);
 $textColor-70: rgba($color: $textColor, $alpha: 0.7);
 $textColor-60: rgba($color: $textColor, $alpha: 0.6);
+$textColor-blue: #6890FF;
+
 $grayColor: #dedede;
 
 $btnRedColor: #FBDBD9;
