--- a/styles/creation.module.scss
+++ b/styles/creation.module.scss
@@ -84,7 +84,13 @@ $paddingScreens: 2rem;
 .create_panel{
   background: $foreground;
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: minmax(28rem, 1fr) 3fr minmax(28rem, 1fr);
+
+  input, select{
+    padding: .6rem 1rem;
+    outline: none;
+    font-size: 1.5rem;
+  }
 
 
   .canvas{
@@ -94,9 +100,36 @@ $paddingScreens: 2rem;
       justify-content: center;
       padding: 0 1rem;
     }
-    background: orange;
+    background: #fff;
     width: 100%;
     aspect-ratio: 16/9;
+    padding: 3rem 2.5rem;
+    overflow-y: auto;
+    
+    &_content{
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+    }
+    
+
+    textarea{
+      width: 100%;
+      font-family: $mainFont;
+      font-size: 1.5rem;
+      color: $textColor;
+      font-weight: 500;
+      border: 0;
+      outline: 0;
+      resize: none;
+    }
+
+    img{
+      max-width: 80%;
+      max-height: 350px;
+      object-fit: contain;
+    }
+
   }
   
   .left_menu, .right_menu{
@@ -149,18 +182,32 @@ $paddingScreens: 2rem;
       gap: 3rem;
     }
   
+    position: relative;
     display: flex;
     align-items: center;
     gap: 1.5rem;
+
+    &.active::before{
+      position: absolute;
+      content: "";
+      top: -1rem;
+      left: -2rem;
+      background: $btnBlueColor;
+      width: calc(100% + 4rem);
+      height: calc(100% + 2rem);
+    }
   
     &_icon{
       min-width: 2.8rem;
       height: 2.8rem;
       background: $mainColor;
       border-radius: 5px;
+      cursor: pointer;
+      z-index: 1;
     }
   
     &_title{
+      flex: 1;
       font-size: 1.4rem;
       font-weight: 500;
       user-select: none;
@@ -169,24 +216,243 @@ $paddingScreens: 2rem;
       -webkit-box-orient: vertical;
       overflow: hidden;
       text-overflow: ellipsis;
+      cursor: pointer;
+      z-index: 1;
     }
   
     &_actions{
       display: flex;
       align-items: center;
       gap: .8rem;
+      z-index: 1;
+
+      .order_icon{
+        svg{
+          cursor: inherit;
+        }
+      }
       
       svg {
         cursor: pointer;
+        *{
+          fill: #797979;
+        }
         &:hover{
           *{
             transition: all .2s;
-            fill: #797979;
+            fill: #222;
           }
         }
       }
     }
+
+    &_menu{
+      margin-top: 2rem;
+      display: none;
+
+      &._active{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+      }
+    }
   
+  }
+
+  .nav{
+    padding-bottom: 1.5rem;
+    display: flex;
+    gap: 3.5rem;
+    // border-bottom: 2px solid $grayColor;
+    position: relative;
+
+    &::before{
+      content: '';
+      position: absolute;
+      left: -2rem;
+      bottom: 0;
+      height: 2px;
+      width: calc(100% + 2 * 2rem);
+      background: $grayColor;
+    }
+  
+    &_menu{
+      font-weight: 600;
+      position: relative;
+      cursor: pointer;
+      &.active::before{
+        position: absolute;
+        content: '';
+        left: 0;
+        bottom: -1.5rem;
+        width: 100%;
+        background: $textColor;
+        height: 3px;
+        border-radius: 3px;
+      }
+    }
+  
+  }
+
+  .input_group{
+
+    &_text{
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
+
+    &_text_inline{
+      display: flex;
+      align-items: center;
+      gap: 2rem;
+
+      .menu_title{
+        min-width: max-content;
+      }
+      
+      input{
+        width: 100%;
+      }
+    }
+
+    &_toggle{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+  }
+
+  .menu_title{
+    font-size: 1.5rem;
+    font-weight: 600;
+
+    &_wrapper{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+  }
+
+  .answer{
+
+    &_list{
+      display: flex;
+      gap: 1.5rem;
+      flex-wrap: wrap;
+    }
+
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    &_checkbox{
+      width: 4rem;
+      height: 4rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: $grayColor;
+      user-select: none;
+    }
+
+    input {
+      display: none;
+    }
+
+    input:checked + .answer_checkbox {
+      background-color: $btnBlueColor;
+    }
+
+  }
+
+  .color_palette{
+
+    &_group{
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
+
+    &_wrapper{
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    .palette{
+      display: flex;
+      div{
+        height: 5rem;
+        width: 2.5rem;
+      }
+    }
+
+  }
+
+  //! DISPLAY NONE INITIAL
+  .customize_menu{
+    display: none;
+    margin-top: 2rem;
+
+    &._active{
+      display: flex;
+      flex-direction: column;
+      gap: 4rem;
+    }
+  }
+
+  .customize_submenu{
+    position: relative;
+    padding-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    &::before{
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -2rem;
+      height: 2px;
+      width: calc(100% + 2 * 2rem);
+      background: $grayColor;
+    }
+  }
+
+  .question_group{
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+
+    &_item{
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+  }
+
+  .controller{
+    input{
+      width: 100%;
+    }
+    p{
+      margin-top: 1rem;
+    }
+    &_relative{
+      position: relative;
+      p{
+        position: absolute;
+        bottom: -2rem;
+        left: 0;
+      }
+    }
   }
 
 }
@@ -229,6 +495,7 @@ $paddingScreens: 2rem;
       min-width: 30rem;
       padding: .6rem 1rem;
       outline: none;
+      font-size: 1.5rem;
     }
 
   }
@@ -236,6 +503,66 @@ $paddingScreens: 2rem;
   .actions{
     display: flex;
     gap: 1.5rem;
+  }
+
+}
+
+.preview_panel{
+  background: $foreground;
+
+  .canvas{
+    &_wrapper{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0 1rem;
+      height: 100%;
+    }
+    background: #fff;
+    width: 100%;
+    max-width: 80%;
+    aspect-ratio: 16/9;
+    padding: 3rem 2.5rem;
+    overflow-y: auto;
+    
+    &_content{
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+    }
+    
+  
+    textarea{
+      width: 100%;
+      font-family: $mainFont;
+      font-size: 1.5rem;
+      color: $textColor;
+      font-weight: 500;
+      border: 0;
+      outline: 0;
+      resize: none;
+      background: none;
+    }
+  
+    img{
+      max-width: 80%;
+      max-height: 350px;
+      object-fit: contain;
+    }
+  
+    &_actions{
+      margin-top: 2rem;
+      display: flex;
+      gap: 2rem;
+      align-items: center;
+  
+      button{
+        height: 3.6rem;
+        display: flex;
+        align-items: center;
+      }
+    }
+  
   }
 
 }
