Backend save-form & save-draft > handle image add/delete to storage Color palette working on front-end > CSS update

--- a/styles/creation.module.scss
+++ b/styles/creation.module.scss
@@ -560,6 +560,11 @@ $paddingScreens: 2rem;
         height: 3.6rem;
         display: flex;
         align-items: center;
+
+        font-weight: 500;
+        @extend .foreground-bg;
+        @extend .text-color;
+        @extend .foreground-bg-hover;
       }
     }
   
