--- a/styles/global.scss
+++ b/styles/global.scss
@@ -154,9 +154,17 @@ header{
     width: 3.6rem;
     height: 3.6rem;
     border-radius: 50%;
-    background: $grayColor;
+    background: #fff;
     cursor: pointer;
     position: relative;
+
+    &::after{
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      content: url('/assets/images/profile.png');
+    }
 
     @include mediaMax(xl){
       width: 3.2rem;
